--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "busca-cep": "^0.5.0",
     "express": "^4.17.1",
     "mysql": "^2.2.5",
     "sequelize": "^6.5.0"
