--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dialogflow": "^3.3.0",
     "body-parser": "^1.19.0",
     "busca-cep": "^0.5.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "uuid": "^8.3.2"
   }
 }
