--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apiClient-01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql": "^2.2.5",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.5.0",
     "uuid": "^8.3.2"
   }
